examples/errors/not_a_location2.pvl
// -*- tab-width:2 ; indent-tabs-mode:nil -*-
//:: cases LocationError2
//:: tools silicon
//:: verdict Error

class C {

  requires Perm(arg,1);
  void main(C arg){
  }

}

